2006-07-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (DOCBOOK2RTF): Fix typo.
	* Makefile.in: Regenerated.
	* lib/libgloss.exp (process_multilib_options): Use -- to handle
	options starting with hyphens.

2006-06-23  Eric Botcazou  <ebotcazou@adacore.com>

	* libgloss.exp (find_gnatmake): Rewrite.

2006-03-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* rsh.exp (rsh_exec): Handle inp and outp arguments.  Use
	local_exec to run rsh.  Return failure if rsh times out.
	* remote.exp (local_exec): Handle "|& cat" we added when deciding
	whether to return output.

2006-06-09  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Use Tcl fall-through syntax for
	multiple cases, not a list (case uses lists, switch does not).
	Pass -glob to switch where applicable to emulate case behaviour.
	* baseboards/h8300.exp: Likewise.
	* lib/framework.exp (clone_output): Likewise.
	(clear_xfail): Likewise.
	(clear_kfail): Likewise.
	* lib/libgloss.exp (process_multilib_options): Likewise.
	* runtest.exp: Likewise.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* Makefile.am (CONTRIB): New.
	(EXTRA_DIST): Add $(CONTRIB).
	(doc/dejagnu.texi): Set directory-category param to docbook2texi.
	* Makefile.in: Regenerate.
	* doc/dejagnu.texi: Likewise.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp (load_lib): Typo fix.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* dejagnu.h: Tidy comments.
	(_BUFFER_SIZE_): Remove to minimise namespace pollution.
	(wait): Define this function unconditionally.  Conditionally
	compile the function body if _DEJAGNU_WAIT_ is defined.
	(buffer): Set the buffer size explicitly.
	(pass): Use sizeof (buffer).  Call wait() unconditionally.
	(fail, untested, unresolved, note): Likewise.
	(enum teststate): Tidy whitespace.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml, doc/ref.xml, doc/user.xml: Edits.
	* doc/dejagnu.texi: Regenerate.

2006-06-06  Ben Elliston  <bje@gnu.org>

	Import from GCC tree: